--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
             rel="stylesheet"
         />
 
+        <link
+            href="https://fonts.googleapis.com/css2?family=Acme&display=swap"
+            rel="stylesheet"
+        />
+
         <title>store | Cameron Conway</title>
     </head>
     <body>
