--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
             rel="stylesheet"
         />
 
+        <link
+            href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+            rel="stylesheet"
+        />
+
         <title>store | Cameron Conway</title>
     </head>
     <body>
