new images and sign up form

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
             rel="stylesheet"
         />
 
+        <link
+            href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+
         <title>store | Cameron Conway</title>
     </head>
     <body>
