Guarantee and dual product clean up

--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,6 @@
         />
 
         <link
-            href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;500;600;700;800&display=swap"
-            rel="stylesheet"
-        />
-
-        <link
             href="https://fonts.googleapis.com/css2?family=Acme&display=swap"
             rel="stylesheet"
         />
@@ -36,6 +31,11 @@
 
         <link
             href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+
+        <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500&display=swap"
             rel="stylesheet"
         />
 
