--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="./assets/favicon.ico" />
+        <link rel="icon" type="image/png" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
 
@@ -28,15 +28,10 @@
             rel="stylesheet"
         />
 
-        <!-- <link
-            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500&display=swap"
-            rel="stylesheet"
-        /> -->
-
         <title>store | Cameron Conway</title>
     </head>
     <body>
         <div id="root">Not rendered</div>
-        <script type="module" src="./App.jsx"></script>
+        <script type="module" src="./src/main.tsx"></script>
     </body>
 </html>
