--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <meta charset="utf-8" />
         <link rel="icon" type="image/png" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
+        <meta name="theme-color" content="#F6F7EB" />
+        <link rel="manifest" href="manifest.json" />
+
+        <link rel="apple-touch-icon" href="/apple-icon-180.png" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,15 +27,15 @@
             rel="stylesheet"
         />
 
-        <link
-            href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
-            rel="stylesheet"
-        />
-
         <title>store | Cameron Conway</title>
     </head>
     <body>
         <div id="root">Not rendered</div>
         <script type="module" src="./src/main.tsx"></script>
+        <script>
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('./service-worker.js');
+            }
+        </script>
     </body>
 </html>
