--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" type="image/png" href="/favicon.ico" />
+        <title>store | Cameron Conway</title>
+        <meta
+            name="description"
+            content="Example of a fashion store landing page."
+        />
+        <meta
+            name="keywords"
+            content="Store, Fashion, Landing Page, Portfolio"
+        />
+        <meta name="author" content="Cameron Conway" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#F6F7EB" />
-        <link rel="manifest" href="manifest.json" />
 
+        <link rel="icon" type="image/png" href="/favicon.ico" />
+        <link rel="manifest" href="manifest.json" />
         <link rel="apple-touch-icon" href="/apple-icon-180.png" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
 
@@ -16,18 +26,14 @@
             href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500&display=swap"
             rel="stylesheet"
         />
-
         <link
             href="https://fonts.googleapis.com/css2?family=Acme&display=swap"
             rel="stylesheet"
         />
-
         <link
             href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
             rel="stylesheet"
         />
-
-        <title>store | Cameron Conway</title>
     </head>
     <body>
         <div id="root">Not rendered</div>
