--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <script type="module" src="./src/main.tsx"></script>
         <script>
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('./src/service-worker.js');
+                navigator.serviceWorker.register('/service-worker.js');
             }
         </script>
     </body>
